--- a/.env.production
+++ b/.env.production
@@ -108,3 +108,17 @@ CDN_THUMBNAILS_PATH=/thumbnails
 # === ANALYTICS ===
 GOOGLE_ANALYTICS_ID=UA-XXXXXXXXX-X
 MIXPANEL_TOKEN=your-mixpanel-token
+
+# Storage Configuration
+STORAGE_PROVIDER=google_drive  # Options: google_drive, local, google_cloud, aws_s3, azure
+
+# Google Drive (For free 15GB storage)
+# Get credentials.json from: https://console.cloud.google.com/apis/credentials
+
+# For other providers (when you scale):
+# GCS_BUCKET=your-bucket-name
+# AWS_S3_BUCKET=your-bucket-name
+# AZURE_CONTAINER=your-container-name
+
+# Local storage
+UPLOAD_FOLDER=data/uploads
