--- a/requirements.txt
+++ b/requirements.txt
@@ -55,6 +55,12 @@ boto3==1.34.0
 google-cloud-storage==2.14.0
 azure-storage-blob==12.23.0
 
+
+# === GOOGLE DRIVE ===
+google-api-python-client==2.108.0
+google-auth-httplib2==0.1.1
+google-auth-oauthlib==1.1.0
+
 # === PAYMENT PROCESSING ===
 stripe==7.7.0
 paypalrestsdk==1.13.1  # Alternative payment
